# cpl_pipeline

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  README.rst  Vagrantfile  entrypoint.sh  environment.yml  main.cpp  pyproject.toml  pyrightconfig.json  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ci/: cirrus_wheels.yml
cpl_extract/: __init__.py  __main__.py  __main___BACKUP_529605.py  __main___REMOTE_529605.py  defaults.py  run_sort.py  utils.py  version.py
cpl_extract/analysis/: blech_clustering.py  circus_interface.py  cluster.py  clustering.py  cohxy.py  held_unit_analysis.py  lfp.py  norm.py  ode.py  palatability_analysis.py  poissonHMM.py  poissonHMM_deprecated.py  scr.py  spike_analysis.py  spike_sorting.py  stat_tests.py
cpl_extract/base/: __init__.py  dataset.py  experiment.py  objects.py  project.py
cpl_extract/extract/: __init__.py  spike2.py
cpl_extract/gui/: _rungui.py  io.py  maingui.py  menu.py  rungui.py  traces.py  widgets.py
cpl_extract/logger/: __init__.py  logs.py
cpl_extract/plot/: data_plot.py  shader.py
cpl_extract/sort/: __init__.py  cluster.py  directory_manager.py  plot.py  plot_blechpy.py  run_sort.py  sorter.py  spk_config.py
cpl_extract/spk_io/: __init__.py  binary.py  cpl_params.py  h5io.py  merge.py  paramio.py  particles.py  printer.py  prompt.py  rawIO.py  server.py  spk_h5.py  userio.py  writer.py
cpl_extract/utils/: cluster_filters.py  decorators.py  math_tools.py  merge.py  particles.py  spike_sorting_GUI.py  tk_widgets.py  userIO.py  write_tools.py
cpl_extract/viz/: plots.py
cpl_pipeline/: __init__.py  __main__.py  run_sort.py  version.py
cpl_pipeline/analysis/: circus_interface.py  cluster.py  held_unit_analysis.py  palatability_analysis.py  poissonHMM.py  spike_analysis.py  spike_sorting.py
cpl_pipeline/base/: dataset.py  experiment.py  objects.py  project.py
cpl_pipeline/extract/: spike2.py
cpl_pipeline/gui/: __init__.py  _rungui.py  io.py  maingui.py  menu.py  traces.py  widgets.py
cpl_pipeline/plot/: data_plot.py  helpers.py
cpl_pipeline/spk_io/: binary.py  h5io.py  paramio.py  printer.py  userio.py  writer.py
cpl_pipeline/utils/: __init__.py  cluster_filters.py  data_reset.py  memory_monitor.py  spike_sorting_GUI.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: conf.py  index.rst  install.rst  preprocessing.rst  usage.rst
docs/api/: index.rst  spk2extract.SpikeData.bandpass_high.rst  spk2extract.SpikeData.bundle_metadata.rst  spk2extract.SpikeData.channel_max_time.rst  spk2extract.SpikeData.max_ticks.rst  spk2extract.SpikeData.max_time.rst  spk2extract.SpikeData.time_base.rst
docs/doctrees/: environment.pickle  guide.wf_sample.doctree  index.doctree  install.doctree  preprocessing.doctree  usage.doctree
docs/guide/: guide.parameters.rst  guide.wf_sample.rst  index.rst
docs/html/: genindex.html  guide.wf_sample.html  index.html  install.html  objects.inv  preprocessing.html  search.html  searchindex.js  usage.html
exclude/: cohxy.py  lfp.py  norm.py  ode.py  scr.py
exclude/docs/: conf.py
gui/: maingui.py  rungui.py
gui/test/: plot.py
nb/: extract.ipynb  foof.ipynb  lfp.ipynb  run_gui.ipynb  run_pipeline.ipynb  sandbox.ipynb  spike_interface.ipynb
nb/lfp/: beta_coh.ipynb  foof.ipynb
spk2extract/: __init__.py  __main__.py  defaults.py  directory_manager.py  helpers.py  logs.py  utils.py  version.py  vispy.py
spk2extract/analysis/: cohxy.py  coupling.py  lfp.py  norm.py  ode.py  scr.py  stats.py
spk2extract/base/: dataset.py  objects.py
spk2extract/extract/: __init__.py  spike2.py
tests/: h5io_test.py  test_traces.py
(+133 files in other folders)
