[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpl_pipeline"
# TODO: add `license-files` once PEP 639 is accepted (see meson-python#88)
license = {file = "LICENSE.txt"}
description = "Spike extraction utilities for python"
authors = [{name = "Flynn O'Connell"}]
keywords = ["spike sorting", "spike extraction", "spike detection", "spike sorting validation"]
readme = "README.md"
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://www.github.com/Flynnoconnell/cpl_pipeline"
source = "https://www.github.com/Flynnoconnell/cpl_pipeline"

[tool.pyright]
include = ["cpl_pipeline"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.vscode",
    "**/.git",
    "**/.DS_Store",
    "**/*.pyc",
    "**/*.pyo",
]

ignore = [
    "docs/**",
    "ci/**",
    "docker/**",
]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"
executionEnvironments = [
  { root = "cpl_pipeline" }
]
